Fixing layout issues, adding new .resume possibilities

--- a/css/sections/_about.scss
+++ b/css/sections/_about.scss
@@ -35,7 +35,7 @@ section.about {
 @media (min-width: 992px) and (max-width: 1200px) {
     
     section.about h1 {
-        max-width: 50%;
+        max-width: 70%;
     }
     
 }
@@ -44,7 +44,7 @@ section.about {
 @media (min-width: 1200px) {
     
     section.about h1 {
-        max-width: 60%;
+        max-width: 80%;
     }
     
 }
