--- a/css/style.scss
+++ b/css/style.scss
@@ -143,7 +143,7 @@ img {
 /*===== HEADER HIERARCHY =====*/
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-family: $secondary-font-stack;
     color: $light-text-color;
     line-height: 105%;
